--- a/WDDAssignments/Final_Project/Sales.html
+++ b/WDDAssignments/Final_Project/Sales.html
@@ -17,6 +17,9 @@
 <link rel="stylesheet" type="text/css" href="CSS/normalize.css">
 
 </head>
+<main>
+<div class="cards"></div>
+</main>
 <body class="html not-front not-logged-in no-sidebars page-node page-node- page-node-44 node-type-panel fluid-width" >
   <div id="skip-link">
     <a href="Home.html" class="element-invisible element-focusable">Home Page</a>
@@ -166,32 +169,56 @@
   <div class="pane-content">
       <p></p>
 
-      <script src="../Final_Project/JS/scooter.js"></script>
-
-
       <div class="content clearfix">
     <div class="field field-name-field-image field-type-image field-label-hidden"><div class="field-items"><div class="field-item even"><img typeof="foaf:Image" src="https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/pennyFarthing.jpg" alt="Pennyfarthing Bike" width="440" height="270" alt="" /></div></div></div><div class="field field-name-field-subject field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div><div class="field field-name-field-heading field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p></p>
 </div></div></div><div class="field field-name-field-link field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div>   
-    <h4>52" Pennyfarthing - Black</h4>
-<ul><li>$1,600</li>
-<li>While this machine harks back to the days of the 1880s, when these were popular, it is brought right up to date with the use of modern materials and manufacturing techniques. </li>
-<li>The frame is made from CrMo and has a moveable rear fork to allow you to change the front fork rake for different riding preferences.  As well as the standard double step which is ideal for coasting there is an additional lower step that can be set to the left or right to help mounting.  There is even a hole on the front fork to house spare spokes.</li>
+    <h4>Honda Metro Scooter</h4>
+<ul><li>3 hour rental: $20</li>
+<li>Honda Metro Scooter is a time-saver with timeless style and all the modern innovations.</li>
+<li>It starts with one of Honda’s famously reliable four-stroke engines, a no-shift automatic transmission, and remarkable fuel efficiency.</li>
+<li>There’s also an electric starter, underseat storage and way more. Take a ride and you’ll see how the Metro Scooter can add some time, gas money, and fun, back into your day.</li>
 </ul>  </div>
 <div class="content clearfix">
     <div class="field field-name-field-image field-type-image field-label-hidden"><div class="field-items"><div class="field-item even"><img typeof="foaf:Image" src="https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/recumbentBike.jpg" alt="Recumbent Bike" width="440" height="270" alt="" /></div></div></div><div class="field field-name-field-subject field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div><div class="field field-name-field-heading field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p></p>
 </div></div></div><div class="field field-name-field-link field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div>   
-    <h4> Triton Pro Three Wheeled Red Cruiser</h4>
-<ul><li>$400</li>
-<li>For the distinguished rider comes a most extraordinary ride. The Triton Pro has all of the qualities you look for in a leisure cycle with the low, rugged chassis of something sportier. A dual-joystick steering system and free-wheel mechanism offers smooth maneuverability and gentle wrist, elbow and hand pressure while the ergonomic recumbent seat adds minimal pressure to your back. Suitable for riders with a range of heights, the Mobo Triton Pro offers unprecedented stability with its low center of gravity that's perfect for riding at the beach, achieving a brisk workout and for leisure rides.</li>
-<li>Tire type: Inflatable rubber tires. Seat height: 12.5 inches above the ground. Cushioned seat. Safety flag included. Recommended riding area: Flat and smooth surfaces.</li>
+    <h4>Honda Dio Scooter</h4>
+<ul><li>3 hour rental: $30</li>
+<li>Honda has thrown in a host of new features on the Dio BS6.</li>
+<li>The most significant of the lot are fully-digital instrumentation and an external fuel-filler.</li>
+<li>It retains its LED headlight but now also gets an engine kill switch, side-stand cut-off and extra storage on the back of the apron.</li>
 </ul>  </div>
       <div class="content clearfix">
     <div class="field field-name-field-image field-type-image field-label-hidden"><div class="field-items"><div class="field-item even"><img typeof="foaf:Image" src="https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/tandemBike.jpeg" alt="Tandem Bike" width="440" height="270" alt="" /></div></div></div><div class="field field-name-field-subject field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div><div class="field field-name-field-heading field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p></p>
 </div></div></div><div class="field field-name-field-link field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div>   
-    <h4>26" Tandem Bike - Blue</h4>
-<ul><li>$300</li>
-<li>Two extra large and comfortable cruiser saddles are mounted on a stylish HI-Ten cruiser frame, with easy reach handlebars and fun bright colors. The frame and the whitewall tires together present a colorful look to the tandem bicycle. Be assured of years of exercise and fun while touring around on bike paths, light trails, or when cruising along a quiet beachside lane.</li>
-<li>The super-relaxed riding position and padded seats are tailor-made and lets you enjoy the scenery while having fun with your family. The integrated rear coast brakes showcase powerful braking irrespective of the weather conditions. Half wrap front and rear fenders are employed in the Hi-Ten steel bike to add further convenience in diverse weather conditions.</li>
+    <h4>Honda PCX150 Scooter</h4>
+<ul><li>3 hour rental: $40</li>
+<li>Honda’s metro-tastic PCX150 scooter was on the receiving end of an upgrade last year.</li>
+<li>It included a facelift from stem to stern that further polishes its ’luxe metropolitan looks to bring more of the swank and swagger associated with the marque, and it comes paired with a more voluminous underseat storage area to increase its ’commuterability’.</li>
+</ul>  </div>
+<div class="content clearfix">
+  <div class="field field-name-field-image field-type-image field-label-hidden"><div class="field-items"><div class="field-item even"><img typeof="foaf:Image" src="https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/pennyFarthing.jpg" alt="Pennyfarthing Bike" width="440" height="270" alt="" /></div></div></div><div class="field field-name-field-subject field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div><div class="field field-name-field-heading field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p></p>
+</div></div></div><div class="field field-name-field-link field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div>   
+  <h4>Honda Pioneer ATV</h4>
+<ul><li>3 hour rental: $50</li>
+<li>At 50-inches wide, it comfortably seats two, so you and a friend can explore any trail, even the ones with width restrictions.</li>
+<li>And it also fits in a full-sized pickup bed.</li>
+<li>It’s loaded with features like automatic transmission with AT/MT modes, and a powerful engine that delivers plenty of low-RPM torque.</li>
+</ul>  </div>
+<div class="content clearfix">
+  <div class="field field-name-field-image field-type-image field-label-hidden"><div class="field-items"><div class="field-item even"><img typeof="foaf:Image" src="https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/recumbentBike.jpg" alt="Recumbent Bike" width="440" height="270" alt="" /></div></div></div><div class="field field-name-field-subject field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div><div class="field field-name-field-heading field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p></p>
+</div></div></div><div class="field field-name-field-link field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div>   
+  <h4>Jeep Wrangler -4 door with a/c</h4>
+<ul><li>3 hour rental: $70</li>
+<li> With the same rugged, distinctively retro look and similar off-road capability, the five-seat Wrangler Unlimited offers a longer wheelbase for easier rear-seat access and more room once you’re back there.</li>
+<li>A 2018 redesign addressed many Wrangler drawbacks, improving on-road handling and ride comfort while bringing a quieter, more civilized interior and added technology features.</li>
+</ul>  </div>
+    <div class="content clearfix">
+  <div class="field field-name-field-image field-type-image field-label-hidden"><div class="field-items"><div class="field-item even"><img typeof="foaf:Image" src="https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/tandemBike.jpeg" alt="Tandem Bike" width="440" height="270" alt="" /></div></div></div><div class="field field-name-field-subject field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div><div class="field field-name-field-heading field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p></p>
+</div></div></div><div class="field field-name-field-link field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div>   
+  <h4>Jeep Wrangler -2 door</h4>
+<ul><li>3 hour rental: $60</li>
+<li>All Jeep Wranglers have the same standard engine, a 2.0L Turbo with eTorque.</li>
+<li>This engine is a mild hybrid that runs steady and smooth on trails while also giving you the benefit of an increased fuel economy without compromising the Wrangler’s performance.</li>
 </ul>  </div>
 
   
@@ -271,5 +298,7 @@ document.write(today);
       </div>
  
 </div>
+<script src="../Final_Project/JS/scooters.js"></script>
+
 </body>
 </html>
