--- a/WDDAssignments/Final_Project/Tours.html
+++ b/WDDAssignments/Final_Project/Tours.html
@@ -140,7 +140,7 @@
   
   <div class="pane-content">
     <h1>
-      Welcome to Scoots! Your one stop scooter rental shop, located in beautiful Cozumel, Mexico. Home of the coolest off road trails South of Tijuana! </h3>
+      Welcome to Scoots Cozumel Tours!</h3>
  </h1>
       
   </div>
@@ -160,10 +160,12 @@
   
   <div class="pane-content">
       <p></p>
-    <h4>We offer guided tours of local biking trails. Our knowledgeable cyclists will show you all the best spots to bike around Bozeman.</h4>
-<ul><li><h2>Garnett Mountian</h2> is a 6.0 mile trail with scenic views. Be sure to bring your camera! Perfect for beginners, but engaging enough for cycling veterans, this adventure tour is not to be missed! Cost: $5. Time to complete: 30 minutes.</li>
-    <li><h2>Grassy Mountain Loop</h2> is a 16.0 mile trail with steep, hilly terrain. suited for more advanced cyclists, this adventure tour is ideal for those looking for a challenge. Cost: $10. Time to complete: 90</li>
-    <li><h1>Special Offer: Get both Adventure Tours for just $12 and save!</h1></li>
+    <h4>We offer guided tours of local trails. Our knowledgeable guides will take you on a journey through breathtaking vistas.</h4>
+<ul><li><h2>East Coast Tour</h2> - Our experienced tour guides will guide you along the best paths to the most breathtaking sites. The Other Side of the Island offers secluded beaches and natural virgin jungle terrain to go off-roading. </li>
+    <li>Cost: $60 - Time to complete: 2 hour.</li>
+    <li><h2>Mayan Ruins Tour</h2> - Ride into the Cozumel jungle, Venture the Jungle with this fun and exciting Cozumel ATV Excursionand onto ancient roads where Mayans use to roam these paths. You’ll learn about the ancient Mayan Culture and Civilization with your professional guide. </li>
+    <li>Cost: $70 - Time to complete: 3 hours.</li>
+    <li><h1>Special Offer: Get both Adventure Tours for just $100 and save!</h1></li>
 </ul>  </div>
 
   
