--- a/WDDAssignments/Final_Project/Home.html
+++ b/WDDAssignments/Final_Project/Home.html
@@ -141,7 +141,11 @@
           
         </div>
         <div class="content clearfix">
-    <div class="field field-name-field-image field-type-image field-label-hidden"><div class="field-items"><div class="field-item even"><img typeof="foaf:Image" src="https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/bike1SML.jpeg" alt="Biker" width="440" height="270" alt="" /></div></div></div><div class="field field-name-field-subject field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div><div class="field field-name-field-heading field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p></p>
+    <div class="field field-name-field-image field-type-image field-label-hidden"><div class="field-items"><div class="field-item even">
+      <img typeof="foaf:Image" src="../Final_Project/IMG/HomeCollage.jpg" alt="Biker" width="440" height="270" alt="" />
+    </div></div></div><div class="field field-name-field-subject field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div>
+    <div class="field field-name-field-heading field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div>
+    <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p></p>
 </div></div></div><div class="field field-name-field-link field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div>   
            
   
@@ -200,7 +204,8 @@ Welcome to Scoots! Your one stop scooter rental shop, located in beautiful Cozum
   <div class="pane-content">
 <div id="node-1289" class="node node-grid-item node-promoted clearfix" about="/content/bicycle-friendly-community" typeof="sioc:Item foaf:Document">
   <div class="content clearfix">
-    <div class="field field-name-field-image field-type-image field-label-hidden"><div class="field-items"><div class="field-item even"><img typeof="foaf:Image" src="https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/bike2SML.jpeg" alt="Another biker" width="440" height="270" alt="" /></div></div></div><div class="field field-name-field-heading field-type-text field-label-hidden">Reservations<div class="field-items"><div class="field-item even"></div></div></div> 
+    <div class="field field-name-field-image field-type-image field-label-hidden"><div class="field-items"><div class="field-item even">
+      <img typeof="foaf:Image" src="../Final_Project/IMG/Reservations.jpg" alt="Another biker" width="440" height="270" alt="" /></div></div></div><div class="field field-name-field-heading field-type-text field-label-hidden">Reservations<div class="field-items"><div class="field-item even"></div></div></div> 
   </div>
 </div>
   </div>
@@ -209,7 +214,8 @@ Welcome to Scoots! Your one stop scooter rental shop, located in beautiful Cozum
   <div class="pane-content">
 <div id="node-1294" class="node node-grid-item node-promoted clearfix" about="/content/bicycle-friendly-state" typeof="sioc:Item foaf:Document">
   <div class="content clearfix">
-    <div class="field field-name-field-image field-type-image field-label-hidden"><div class="field-items"><div class="field-item even"><img typeof="foaf:Image" src="https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/bike3SML.jpeg" alt="Yet another biker" width="400" height="245" alt="" /></div></div></div><div class="field field-name-field-heading field-type-text field-label-hidden"><div class="field-items"><div class="field-item even">Tours</div></div></div><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p></p>
+    <div class="field field-name-field-image field-type-image field-label-hidden"><div class="field-items"><div class="field-item even">
+      <img typeof="foaf:Image" src="../Final_Project/IMG/CaveTour.jpg" alt="Yet another biker" width="400" height="245" alt="" /></div></div></div><div class="field field-name-field-heading field-type-text field-label-hidden"><div class="field-items"><div class="field-item even">Tours</div></div></div><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p></p>
 </div></div></div> 
   </div>
 </div>
@@ -219,7 +225,8 @@ Welcome to Scoots! Your one stop scooter rental shop, located in beautiful Cozum
   <div class="pane-content">
 <div id="node-1293" class="node node-grid-item node-promoted clearfix" about="/content/bicycle-friendly-business-0" typeof="sioc:Item foaf:Document">
   <div class="content clearfix">
-    <div class="field field-name-field-image field-type-image field-label-hidden"><div class="field-items"><div class="field-item even"><img typeof="foaf:Image" src="https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/bike4SML.jpeg" alt="Yet still another biker" width="440" height="270" alt="" /></div></div></div><div class="field field-name-field-heading field-type-text field-label-hidden"><div class="field-items"><div class="field-item even">Store</div></div></div>
+    <div class="field field-name-field-image field-type-image field-label-hidden"><div class="field-items"><div class="field-item even">
+      <img typeof="foaf:Image" src="../Final_Project/IMG/Store.jpg" alt="Yet still another biker" width="440" height="270" alt="" /></div></div></div><div class="field field-name-field-heading field-type-text field-label-hidden"><div class="field-items"><div class="field-item even">Store</div></div></div>
   </div>
 </div>
   </div>
@@ -233,7 +240,8 @@ Welcome to Scoots! Your one stop scooter rental shop, located in beautiful Cozum
 
   <div class="content clearfix">
 
-    <div class="field field-name-field-image field-type-image field-label-hidden"><div class="field-items"><div class="field-item even"><img typeof="foaf:Image" src="https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/bike5SML.jpeg" alt="More biker" width="440" height="270" alt="" /></div></div></div><div class="field field-name-field-heading field-type-text field-label-hidden"><div class="field-items"><div class="field-item even">Rentals</div></div></div>
+    <div class="field field-name-field-image field-type-image field-label-hidden"><div class="field-items"><div class="field-item even">
+      <img typeof="foaf:Image" src="../Final_Project/IMG/Rentals.jpg" alt="More biker" width="440" height="270" alt="" /></div></div></div><div class="field field-name-field-heading field-type-text field-label-hidden"><div class="field-items"><div class="field-item even">Rentals</div></div></div>
 </div></div></div>
   </div>
 </div>
