--- a/WDDAssignments/Final_Project/Rentals.html
+++ b/WDDAssignments/Final_Project/Rentals.html
@@ -149,7 +149,8 @@
           
         </div>
         <div class="content clearfix">
-    <div class="field field-name-field-image field-type-image field-label-hidden"><div class="field-items"><div class="field-item even"><img typeof="foaf:Image" src="https://raw.githubusercontent.com/Tienut73/Tienut73.github.io/master/assignments/lesson-12/IMG/bike1SML.jpeg" alt="Biker" width="440" height="270" alt="" /></div></div></div><div class="field field-name-field-subject field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div><div class="field field-name-field-heading field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p></p>
+    <div class="field field-name-field-image field-type-image field-label-hidden"><div class="field-items"><div class="field-item even">
+      <img typeof="foaf:Image" src="../Final_Project/IMG/Rentals.jpg" alt="Biker" width="440" height="270" alt="" /></div></div></div><div class="field field-name-field-subject field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div><div class="field field-name-field-heading field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p></p>
 </div></div></div><div class="field field-name-field-link field-type-text field-label-hidden"><div class="field-items"><div class="field-item even"></div></div></div>   
            
   
