--- a/WDDAssignments/Final_Project/Home.html
+++ b/WDDAssignments/Final_Project/Home.html
@@ -109,13 +109,12 @@
     <div class="node-social">
       <div class="node-social-container">
             <div class="social-button">Share This!</div>
-      <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+      <!-- <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
       <div class="social-button"><a class="addthis_button_facebook">
       <div class="social-button"><a class="addthis_button_twitter">
       <div class="social-button"><a class="addthis_button_google_plusone_share">
-      <div class="social-button"><a class="addthis_button_linkedin">
-      <div class="social-button"><a class="addthis_button_email">
-      <div class="clear">
+      <div class="social-button"><a class="addthis_button_linkedin"> 
+      <div class="social-button"><a class="addthis_button_email">-->
       </div> 
           </a>
       </div>
@@ -130,7 +129,7 @@
           </div> 
        
 
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=xa-51a543df79f8add6"></script> 
+<!-- <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=xa-51a543df79f8add6"></script>  -->
           
           <div class="panel-display custom-lab-panel-layout clearfix" id="hdr1-blu">
   <div class="panel-panel panel-col-top clearfix">
@@ -361,7 +360,6 @@ document.write(today);
       </div>
  
 </div>
-<script src="../Final_Project/js/currentdate.js/"></script>
 <script src="../Final_Project/js/hamburger.js"></script>
 <script src="../Final_Project/js/windchill.js"></script>
 <script src="../Final_Project/js/weatherapi.js"></script>
