--- a/WDDAssignments/Final_Project/Thanks.html
+++ b/WDDAssignments/Final_Project/Thanks.html
@@ -98,15 +98,15 @@
     <div class="node-social">
       <div class="node-social-container">
             <div class="social-button">Share This</div>
-      <div class="addthis_toolbox addthis_default_style addthis_32x32_style"></div> </a>
+      <!-- <div class="addthis_toolbox addthis_default_style addthis_32x32_style"></div> </a>
       <div class="social-button"><a class="addthis_button_facebook"></div></a>
       <div class="social-button"><a class="addthis_button_twitter"> </div></a>
       <div class="social-button"><a class="addthis_button_google_plusone_share"></div></a>
       <div class="social-button"><a class="addthis_button_linkedin"></div></a>
       <div class="social-button"><a class="addthis_button_email"></div>
-      <div class="clear"></div>
+      <div class="clear"></div> -->
        
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=xa-51a543df79f8add6"></script> 
+<!-- <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=xa-51a543df79f8add6"></script>  -->
           
           <div class="panel-display custom-lab-panel-layout clearfix" id="hdr1-blu">
   <div class="panel-panel panel-col-top clearfix">
